mycluster/myfrontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: myfrontend-deployment
    labels:
        app: my-app
        type: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: my-app
                type: frontend

        spec:
            containers:
                - name: myfrontend-container
                  image: pskrzypk/myfrontend
                  stdin: true

    replicas: 3
    selector:
        matchLabels:
            app: my-app
            type: frontend
