mycluster/mypostgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mypostgres-deployment
  labels:
    app: my-app
    type: db

spec:
  template:
    metadata:
      name: mypostgres-pod
      labels:
        app: my-app
        type: db
    spec:
      containers:
        - name: mypostgres-container
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresvolume
              #subPath: postgres # breaks stuff
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: mypostgres-pvc
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      type: db
