mycluster/mybackendlb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    component: backend
    app: my-app

# sluzy po to zeby serwisy (nazwy wewnatrz clustra) funkcjonowaly jako nazwa w lokalnym dns
# po to, zeby backend widzial baze danych
# wewnatrz clustra
