mycluster/mybackendlb-node-port.yaml
# tylko do testowania
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-node-port

spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31100
  selector:
    component: backend
    app: my-app

# port danego poda na zewnatrz
