mycluster/myredis-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: myredis-clusterip

spec:
    type: ClusterIP
    ports:
        - targetPort: 6379
          port: 6379

    selector:
        type: cache
